Fixed z-index issue with videos in panels

--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -1,4 +1,4 @@
-.base {
+.video {
   video {
     z-index: 10;
   }
